<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DFD8DF"
        >
        <TextView
            android:id="@+id/text_const_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_nutirition_data"
            android:textColor="@color/black"
            android:textSize="@dimen/sp18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_user_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen16"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/button"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_const_id"
            app:layout_constraintVertical_bias="0.04000002">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_ingredient"
                android:layout_width="match_parent"
                android:minHeight="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_whight"
                android:inputType="textAutoComplete"
                android:gravity="top"
                android:hint="@string/enter_ingredients"
                android:minLines="1"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/sp14" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/analyze"

            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <include
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/progress_id"
            layout="@layout/custom_progress"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>